# istadash

./: .gitignore  CHANGELOG.md  LICENSE  README.md  make_icons.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
istadash/: __init__.py  __main__.py  config.py  ista_client.py  main.py  security.py  storage.py
istadash/services/: sync.py
istadash/static/: styles.css
istadash/templates/: _logs_drawer.html  index.html  login.html
tests/: test_config.py  test_main.py  test_storage.py  test_sync.py
