[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "istadash"
version = "0.1.0"
description = "Local energy dashboard for ista UK heat meter readings"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "Asad Islam", email = "asadislam94@gmail.com" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "beautifulsoup4>=4.12.3",
    "Flask>=3.1.0",
    "keyring>=25.6.0",
    "pywebview[qt]>=6.0",
    "requests>=2.32.3",
]

[project.urls]
Homepage = "https://github.com/asadislam94/istadash"
Repository = "https://github.com/asadislam94/istadash"

[project.scripts]
istadash = "istadash.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
    "briefcase>=0.3",
]

[tool.setuptools]
packages = ["istadash", "istadash.services"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

# ---------------------------------------------------------------------------
# Briefcase — cross-platform desktop packaging
# ---------------------------------------------------------------------------
[tool.briefcase]
project_name = "IstaDash"
bundle = "io.github.asadislam94"
version = "0.1.0"
url = "https://github.com/asadislam94/istadash"
author = "Asad Islam"
author_email = "asadislam94@gmail.com"

[tool.briefcase.app.istadash]
formal_name = "IstaDash"
description = "Local energy dashboard for ista UK heat meter readings"
long_description = "IstaDash reads your ista UK heat meter data and displays usage history in a local web dashboard."
icon = "icons/icon"
# 'app' package is the source; __main__.py is the entry point
sources = ["istadash"]
main = "istadash"
requires = [
    "beautifulsoup4>=4.12.3",
    "Flask>=3.1.0",
    "keyring>=25.6.0",
    "pywebview[qt]>=6.0",
    "requests>=2.32.3",
]

[tool.briefcase.app.istadash.linux]

[tool.briefcase.app.istadash.windows]
guid = "483f8263-af22-5072-8c12-d5b1818888fa"
system_installer = true
use_full_install_path = false
